--- a/services/pubspec.yaml
+++ b/services/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   custom_refresh_indicator: ^1.0.0
   font_awesome_flutter: ^9.2.0
   material_design_icons_flutter: ^5.0.6595
+  url_strategy: ^0.2.0
+  auto_route: ^3.2.4
 
 dev_dependencies:
   flutter_test:
